--- a/css/full-info-light.css
+++ b/css/full-info-light.css
@@ -9,7 +9,7 @@
 main {
   margin: 0;
   width: 100%;
-  margin-bottom: 124px;
+  display: grid;
 }
 
 /* Nav */
@@ -39,7 +39,7 @@ nav a {
 /* HERO */
 #hero {
   display: grid;
-  grid-template-rows: 250px 479px;
+  grid-template-rows: 250px 283px;
   grid-template-columns: auto 1fr 1fr auto;
   column-gap: 16px;
   justify-items: end;
@@ -47,7 +47,7 @@ nav a {
 }
 
 #hero h1 {
-  grid-area:  1 / 1 / 1 / -1;
+  grid-area: 1 / 1 / 1 / -1;
   padding: 98px 0 98px 0;
   text-align: center;
   justify-self: center;
@@ -56,6 +56,7 @@ nav a {
 #hero a {
   grid-area: 2 / -1 / 2 / 1;
   margin-top: 200px;
+  margin-bottom: 0;
   align-self: self-start;
   transform: rotate(180deg);
   padding-right: 16px;
@@ -77,21 +78,35 @@ nav a {
   margin: 16px;
   opacity: 85%;
   place-self: start;
-  padding-bottom: 0px;
-  margin-top: 195px;
+  margin-top: 145px;
+}
+
+.back-button {
+  rotate: 180deg;
 }
 
 
-/* QUICK INFO */
+/* CONTENT STYLING */
 
-.quick-info {
-  grid-area: 2 / 2 / -1 / -1 ;
-  margin: 310px 16px 0 110px;
+#all-content {
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: minmax(16px, 94px) 1fr 1fr auto;
+  position: relative;
+  margin: 26px 16px 76px 16px;
+}
+
+#all-content h3 {
+  position: relative;
   z-index: 1;
+  grid-column: 2 / -1; 
 }
 
-.quick-info h3 {
-  gap: 8px;
+#all-content h3:nth-of-type(2) {
+    grid-column: 2 / -1;
+    margin-bottom: 32px;
 }
 
-
+#all-content p {
+    grid-column: 2 / -1;
+}
